--- a/src/app/vehiculo/vehiculo.component.html
+++ b/src/app/vehiculo/vehiculo.component.html
@@ -2,81 +2,59 @@
     <main class="content">
         <div class="container-fluid p-0">
   
-          <h1 class="h3 mb-3"><strong>Analytics</strong> Dashboard</h1>
+          <div class="row topbar mb-4">
+            <div class="col-10 d-flex">
+              <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                  <div class="input-group">
+                      <input type="text" class="form-control border-0 small" placeholder="Buscar vehículo"
+                          aria-label="Search" aria-describedby="basic-addon2">
+                      <div class="input-group-append">
+                          <button class="btn btn-primary" type="button">
+                            <i class="bi bi-search"></i>
+                          </button>
+                      </div>
+                  </div>
+              </form>
+            </div>
+            <div class="col-2 d-flex btn-add">
+              <button type="button" class="btn"><i class="bi bi-plus"></i>Agregar</button>
+            </div>
+          </div>
  
           <div class="row">
             <div class="col-12 d-flex">
               <div class="card flex-fill">
                 <div class="card-header">
   
-                  <h5 class="card-title mb-0">Latest Projects</h5>
+                  <h5 class="card-title mb-0">Listado de vehículos</h5>
                 </div>
                 <table class="table table-hover my-0">
                   <thead>
                     <tr>
-                      <th>Name</th>
-                      <th class="d-none d-xl-table-cell">Start Date</th>
-                      <th class="d-none d-xl-table-cell">End Date</th>
-                      <th>Status</th>
-                      <th class="d-none d-md-table-cell">Assignee</th>
+                      <th>Típo</th>
+                      <th class="d-none d-xl-table-cell">Estado</th>
+                      <th class="d-none d-xl-table-cell">Dominio</th>
+                      <th>Largo [m]</th>
+                      <th class="d-none d-md-table-cell">Kilometraje</th>
+                      <th class="d-none d-md-table-cell">Marca</th>
+                      <th class="d-none d-md-table-cell">Acciones</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Project Apollo</td>
-                      <td class="d-none d-xl-table-cell">01/01/2021</td>
-                      <td class="d-none d-xl-table-cell">31/06/2021</td>
-                      <td><span class="badge bg-success">Done</span></td>
-                      <td class="d-none d-md-table-cell">Vanessa Tucker</td>
-                    </tr>
-                    <tr>
-                      <td>Project Fireball</td>
-                      <td class="d-none d-xl-table-cell">01/01/2021</td>
-                      <td class="d-none d-xl-table-cell">31/06/2021</td>
-                      <td><span class="badge bg-danger">Cancelled</span></td>
-                      <td class="d-none d-md-table-cell">William Harris</td>
-                    </tr>
-                    <tr>
-                      <td>Project Hades</td>
-                      <td class="d-none d-xl-table-cell">01/01/2021</td>
-                      <td class="d-none d-xl-table-cell">31/06/2021</td>
-                      <td><span class="badge bg-success">Done</span></td>
-                      <td class="d-none d-md-table-cell">Sharon Lessman</td>
-                    </tr>
-                    <tr>
-                      <td>Project Nitro</td>
-                      <td class="d-none d-xl-table-cell">01/01/2021</td>
-                      <td class="d-none d-xl-table-cell">31/06/2021</td>
-                      <td><span class="badge bg-warning">In progress</span></td>
-                      <td class="d-none d-md-table-cell">Vanessa Tucker</td>
-                    </tr>
-                    <tr>
-                      <td>Project Phoenix</td>
-                      <td class="d-none d-xl-table-cell">01/01/2021</td>
-                      <td class="d-none d-xl-table-cell">31/06/2021</td>
-                      <td><span class="badge bg-success">Done</span></td>
-                      <td class="d-none d-md-table-cell">William Harris</td>
-                    </tr>
-                    <tr>
-                      <td>Project X</td>
-                      <td class="d-none d-xl-table-cell">01/01/2021</td>
-                      <td class="d-none d-xl-table-cell">31/06/2021</td>
-                      <td><span class="badge bg-success">Done</span></td>
-                      <td class="d-none d-md-table-cell">Sharon Lessman</td>
-                    </tr>
-                    <tr>
-                      <td>Project Romeo</td>
-                      <td class="d-none d-xl-table-cell">01/01/2021</td>
-                      <td class="d-none d-xl-table-cell">31/06/2021</td>
-                      <td><span class="badge bg-success">Done</span></td>
-                      <td class="d-none d-md-table-cell">Christina Mason</td>
-                    </tr>
-                    <tr>
-                      <td>Project Wombat</td>
-                      <td class="d-none d-xl-table-cell">01/01/2021</td>
-                      <td class="d-none d-xl-table-cell">31/06/2021</td>
-                      <td><span class="badge bg-warning">In progress</span></td>
-                      <td class="d-none d-md-table-cell">William Harris</td>
+                      <td>TIPO VEHICULO</td>
+                      <td class="d-none d-xl-table-cell">ESTADO VEH</td>
+                      <td class="d-none d-xl-table-cell">DOMINIO VEH</td>
+                      <td><span class="d-none d-md-table-cell">LARGO</span></td>
+                      <td class="d-none d-md-table-cell">KILOMETRAJE</td>
+                      <td class="d-none d-md-table-cell">MARCA VEH</td>
+                      <td class="d-none d-md-table-cell">
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                          <button type="button" class="btn btn-outline-success"><i class="bi bi-pencil-fill"></i></button>
+                          <button type="button" class="btn btn-outline-danger"><i class="bi bi-trash"></i></button>
+                        </div>
+                      </td>
+
                     </tr>
                   </tbody>
                 </table>
