--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,21 +18,50 @@
           </li>
   
           <li class="sidebar-item">
-            <a class="sidebar-link" routerLink="/vehiculo">
-              <i class="bi bi-truck"></i> <span class="align-middle">Vehículo</span>
+            <a class="sidebar-link align-items-center collapsed" data-bs-toggle="collapse" data-bs-target="#vehiculo-collapse" aria-expanded="false">
+              <i class="bi bi-truck"></i><span class="align-middle">Vehículo</span>
             </a>
+            <div class="collapse" id="vehiculo-collapse">
+
+              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a routerLink="/vehiculo">Vehículo</a></li>
+                <li><a routerLink="/vehiculo">Vencimientos</a></li>
+                <li><a routerLink="/vehiculo">Estado Vehículo</a></li>
+                <li><a routerLink="/vehiculo">Tipo Vehículo</a></li>
+                <li><a routerLink="/vehiculo">Parámetros de Vencimiento</a></li>
+              </ul>
+            </div>
           </li>
-  
+
           <li class="sidebar-item">
-            <a class="sidebar-link" routerLink="/mantenimiento">
+            <a class="sidebar-link align-items-center collapsed" data-bs-toggle="collapse" data-bs-target="#mantenimiento-collapse" aria-expanded="false">
               <i class="bi bi-tools"></i> <span class="align-middle">Mantenimiento</span>
             </a>
+            <div class="collapse" id="mantenimiento-collapse">
+
+              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a routerLink="/mantenimiento">Vehiculos</a></li>
+                <li><a routerLink="/mantenimiento">Cubiertas</a></li>
+                <li><a routerLink="/mantenimiento">Parametro Eje</a></li>
+                <li><a routerLink="/mantenimiento">Parametro Movimiento</a></li>
+                <li><a routerLink="/mantenimiento">Movimiento Cubiertas</a></li>
+              </ul>
+            </div>
           </li>
-  
+
           <li class="sidebar-item">
-            <a class="sidebar-link" routerLink="/viajes">
+            <a class="sidebar-link align-items-center collapsed" data-bs-toggle="collapse" data-bs-target="#viaje-collapse" aria-expanded="false">
               <i class="bi bi-globe2"></i> <span class="align-middle">Viajes</span>
             </a>
+            <div class="collapse" id="viaje-collapse">
+
+              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a routerLink="/viaje">Alta Viaje</a></li>
+                <li><a routerLink="/viaje">Realizar Rendición Viaje</a></li>
+                <li><a routerLink="/viaje">Modificar Rendición</a></li>
+                <li><a routerLink="/viaje">Tipo Viatico</a></li>
+              </ul>
+            </div>
           </li>
   
           <li class="sidebar-item">
@@ -42,9 +71,17 @@
           </li>
   
           <li class="sidebar-item">
-            <a class="sidebar-link" routerLink="/choferes">
+            <a class="sidebar-link align-items-center collapsed" data-bs-toggle="collapse" data-bs-target="#choferes-collapse" aria-expanded="false">
               <i class="bi bi-person-lines-fill"></i> <span class="align-middle">Choferes</span>
             </a>
+            <div class="collapse" id="choferes-collapse">
+
+              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a routerLink="/choferes">Choferes</a></li>
+                <li><a routerLink="/choferes">Carnet</a></li>
+                <li><a routerLink="/choferes">Estado Chofer</a></li>
+              </ul>
+            </div>
           </li>
   
           <li class="sidebar-item">
@@ -54,15 +91,34 @@
           </li>
   
           <li class="sidebar-item">
-            <a class="sidebar-link" routerLink="/seguridad">
+            <a class="sidebar-link align-items-center collapsed" data-bs-toggle="collapse" data-bs-target="#seguridad-collapse" aria-expanded="false">
               <i class="bi bi-shield-shaded"></i> <span class="align-middle">Seguridad</span>
             </a>
+            <div class="collapse" id="seguridad-collapse">
+
+              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a routerLink="/seguridad">Alta Usuario</a></li>
+                <li><a routerLink="/seguridad">Modificar Usuario</a></li>
+                <li><a routerLink="/seguridad">Alta Rol</a></li>
+                <li><a routerLink="/seguridad">Modificar Rol</a></li>
+                <li><a routerLink="/seguridad">Alta Permiso</a></li>
+                <li><a routerLink="/seguridad">Modificar Permiso</a></li>
+                <li><a routerLink="/seguridad">Sesión Usuario</a></li>
+              </ul>
+            </div>
           </li>
   
           <li class="sidebar-item">
-            <a class="sidebar-link" routerLink="/backup">
+            <a class="sidebar-link align-items-center collapsed" data-bs-toggle="collapse" data-bs-target="#backup-collapse" aria-expanded="false">
               <i class="bi bi-hdd"></i> <span class="align-middle">Backup y Recuperación</span>
             </a>
+            <div class="collapse" id="backup-collapse">
+
+              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a routerLink="/backup">Realizar Backup</a></li>
+                <li><a routerLink="/backup">Realizar Recuperación</a></li>
+              </ul>
+            </div>
           </li>
 
         </ul>
@@ -109,114 +165,12 @@
                     </div>
                   </div>
                 </a>
-                <a href="#" class="list-group-item">
-                  <div class="row g-0 align-items-center">
-                    <div class="col-2">
-                      <i class="text-warning" data-feather="bell"></i>
-                    </div>
-                    <div class="col-10">
-                      <div class="text-dark">Lorem ipsum</div>
-                      <div class="text-muted small mt-1">Aliquam ex eros, imperdiet vulputate hendrerit et.</div>
-                      <div class="text-muted small mt-1">2h ago</div>
-                    </div>
-                  </div>
-                </a>
-                <a href="#" class="list-group-item">
-                  <div class="row g-0 align-items-center">
-                    <div class="col-2">
-                      <i class="text-primary" data-feather="home"></i>
-                    </div>
-                    <div class="col-10">
-                      <div class="text-dark">Login from 192.186.1.8</div>
-                      <div class="text-muted small mt-1">5h ago</div>
-                    </div>
-                  </div>
-                </a>
-                <a href="#" class="list-group-item">
-                  <div class="row g-0 align-items-center">
-                    <div class="col-2">
-                      <i class="text-success" data-feather="user-plus"></i>
-                    </div>
-                    <div class="col-10">
-                      <div class="text-dark">New connection</div>
-                      <div class="text-muted small mt-1">Christina accepted your request.</div>
-                      <div class="text-muted small mt-1">14h ago</div>
-                    </div>
-                  </div>
-                </a>
               </div>
               <div class="dropdown-menu-footer">
                 <a href="#" class="text-muted">Show all notifications</a>
               </div>
             </div>
           </li>
-          <!-- <li class="nav-item dropdown">
-            <a class="nav-icon dropdown-toggle" href="#" id="messagesDropdown" data-bs-toggle="dropdown">
-              <div class="position-relative">
-                <i class="align-middle" data-feather="message-square"></i>
-              </div>
-            </a>
-            <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end py-0" aria-labelledby="messagesDropdown">
-              <div class="dropdown-menu-header">
-                <div class="position-relative">
-                  4 New Messages
-                </div>
-              </div>
-              <div class="list-group">
-                <a href="#" class="list-group-item">
-                  <div class="row g-0 align-items-center">
-                    <div class="col-2">
-                      <img src="img/avatars/avatar-5.jpg" class="avatar img-fluid rounded-circle" alt="Vanessa Tucker">
-                    </div>
-                    <div class="col-10 ps-2">
-                      <div class="text-dark">Vanessa Tucker</div>
-                      <div class="text-muted small mt-1">Nam pretium turpis et arcu. Duis arcu tortor.</div>
-                      <div class="text-muted small mt-1">15m ago</div>
-                    </div>
-                  </div>
-                </a>
-                <a href="#" class="list-group-item">
-                  <div class="row g-0 align-items-center">
-                    <div class="col-2">
-                      <img src="img/avatars/avatar-2.jpg" class="avatar img-fluid rounded-circle" alt="William Harris">
-                    </div>
-                    <div class="col-10 ps-2">
-                      <div class="text-dark">William Harris</div>
-                      <div class="text-muted small mt-1">Curabitur ligula sapien euismod vitae.</div>
-                      <div class="text-muted small mt-1">2h ago</div>
-                    </div>
-                  </div>
-                </a>
-                <a href="#" class="list-group-item">
-                  <div class="row g-0 align-items-center">
-                    <div class="col-2">
-                      <img src="img/avatars/avatar-4.jpg" class="avatar img-fluid rounded-circle" alt="Christina Mason">
-                    </div>
-                    <div class="col-10 ps-2">
-                      <div class="text-dark">Christina Mason</div>
-                      <div class="text-muted small mt-1">Pellentesque auctor neque nec urna.</div>
-                      <div class="text-muted small mt-1">4h ago</div>
-                    </div>
-                  </div>
-                </a>
-                <a href="#" class="list-group-item">
-                  <div class="row g-0 align-items-center">
-                    <div class="col-2">
-                      <img src="img/avatars/avatar-3.jpg" class="avatar img-fluid rounded-circle" alt="Sharon Lessman">
-                    </div>
-                    <div class="col-10 ps-2">
-                      <div class="text-dark">Sharon Lessman</div>
-                      <div class="text-muted small mt-1">Aenean tellus metus, bibendum sed, posuere ac, mattis non.</div>
-                      <div class="text-muted small mt-1">5h ago</div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="dropdown-menu-footer">
-                <a href="#" class="text-muted">Show all messages</a>
-              </div>
-            </div>
-          </li> -->
           <li class="nav-item dropdown">
             <a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#" data-bs-toggle="dropdown">
               <i class="align-middle" data-feather="settings"></i>
@@ -226,13 +180,9 @@
               <img src="../assets/avatars/avatar.jpg" class="avatar img-fluid rounded me-1" alt="Charles Hall" /> <span class="text-dark">Charles Hall</span>
             </a>
             <div class="dropdown-menu dropdown-menu-end">
-              <a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1" data-feather="user"></i> Profile</a>
-              <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="pie-chart"></i> Analytics</a>
+              <a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1" data-feather="user"></i> Perfil</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="pages-settings.html"><i class="align-middle me-1" data-feather="settings"></i> Settings & Privacy</a>
-              <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="help-circle"></i> Help Center</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Log out</a>
+              <a class="dropdown-item" href="#">Cerrar Sesión</a>
             </div>
           </li>
         </ul>
